# apple-dl

./: Dockerfile  compose.github.yml  compose.yml
.github/workflows/: ci.yml  docker-backend.yml  docker-frontend.yml  docker.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/apple_dl/: __init__.py  apple_music_api.py  config.py  jobs.py  logger.py  logging.py  main.py  request_context.py  test_apple_music_api.py  utils.py
backend/src/apple_dl/apple_music/: downloader.py  models.py
backend/src/apple_dl/discord_bot/: __init__.py  bot.py  player.py  player.py.copy  utils.py
backend/src/apple_dl/discord_bot/extensions/: admin.py  music.py
backend/src/apple_dl/routers/: api.py  websocket.py
backend/src/apple_dl/routers/v1/: apple_music.py  discord.py  jobs.py
backend/src/apple_dl/routes/: __init__.py  api.py  discord.py  frontend.py  websocket.py
backend/src/apple_dl/schemas/: discord_schemas.py  job_schemas.py
docker/: Dockerfile
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  redocly.yml  vite.config.ts
frontend/.tanstack/tmp/: e10570a1-89382480e63814d873b8b1950771d520  efdd296a-5ac1a46a5249df17f9d3a1aa5dfbd396
frontend/docker/: apple-dl.conf.template  nginx.conf.template
frontend/src/: App.tsx  jobs.tsx  main.tsx  openapi-schema.ts  routeTree.gen.ts
frontend/src/components/: add-to-discord.tsx  album-card.tsx  artist-card.tsx  discord-queue.tsx  download-button.tsx  jobs-dialog.tsx  link.tsx  navbar.tsx  playback-bar.tsx  playlist-card.tsx  route.tsx  search-bar.tsx  search-tabs.tsx  secondary-sidebar.tsx  song-card.tsx
frontend/src/contexts/: discord-context.tsx  jobs-context.tsx  layout-context.tsx  socket-context.tsx
frontend/src/hooks/: use-discord.ts  use-jobs.ts  use-layout.ts  use-persist-state.ts  use-socket.ts
userscript/: LICENSE  README.md  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
(+30 files in other folders)
